# slint-rust-android-nix

./: Cargo.toml  README.md  bashrc  cargo_store.sh  flake.nix  install-nix.sh  install_nix_docker.sh  justfile
.github/actions/setup-nix-android/: action.yml
.github/workflows/: android-build-all.yml  android-release.yml  gstreamer-android-build.yml  quick-build.yml  slint-android-build.yml
.idx/: dev.nix
.idx/modules/: environment.nix  packages.nix  previews.nix  workspace.nix
.idx/modules/gstreamer-android/: default.nix
.idx/modules/slint-android/: default.nix  emulator.nix
.idx/overlays/: fenix.nix  rust.nix
.idx/scripts/: enable-slint.nix  load-slint.sh
overlays/: android.nix  default.nix
src/: lib.rs
