[package]
name = "my-slint-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.0", features = ["backend-android-activity-06"] }

[package.metadata.android]
package = "com.example.myslintapp"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"